--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "Cloudinary Customer Education",
   "license": "MIT",
   "dependencies": {
-    "busboy": "^1.6.0",
-    "imagemagick": "^0.1.3",
-    "moment": "^2.29.4"
+    "lambda-multipart-parser": "^1.0.1",
+    "moment": "^2.29.4",
+    "sharp": "^0.31.3"
   }
 }
