--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Cloudinary Customer Education",
   "license": "MIT",
   "dependencies": {
+    "cloudinary": "^1.33.0",
+    "dotenv": "^16.0.3",
     "lambda-multipart-parser": "^1.0.1",
     "moment": "^2.29.4",
     "sharp": "^0.31.3"
