--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Serverless function to process custom Cloudinary transformation ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "netlify functions:serve",
+    "test": "echo \"Error: no test specified\" && exit 1"  
   },
   "author": "Cloudinary Customer Education",
   "license": "MIT",
